bug fixes in blink ranking

--- a/peerinst/templates/registration/sign_up_done.html
+++ b/peerinst/templates/registration/sign_up_done.html
@@ -2,10 +2,10 @@
 
 {% block body %}
 <div>
-<h1>Email Sent</h1>
+<h1>Processing request</h1>
 
 
-  <h2>Please check your inbox</h2>
-  <p> </p>
+
+  <p> A member of our team will contact you once your account is created.</p>
 </div>
 {% endblock %}
