--- a/peerinst/templates/peerinst/teacher_detail.html
+++ b/peerinst/templates/peerinst/teacher_detail.html
@@ -74,7 +74,7 @@
   {% if not object.blinkassignment_set.all %}
   A blink script is a series of blink questions strung together into one activity.  You do not have any blink scripts.
   {% endif %}
-    Students can always access the current active question at <span style="font-weight:bold;">{% url 'blink-get-current' object.user.username %}</span>
+    Students can always access the current active question at <span style="font-weight:bold;">{{ request.get_host}}{% url 'blink-get-current' object.user.username %}</span>
   <ol>
 
   {% for a in object.blinkassignment_set.all %}
