Under construction added to TOS page

--- a/peerinst/templates/registration/sign_up_done.html
+++ b/peerinst/templates/registration/sign_up_done.html
@@ -4,8 +4,7 @@
 <div>
 <h1>Processing request</h1>
 
+  <p> A member of our team will contact you once your account has been created.</p>
 
-
-  <p> A member of our team will contact you once your account is created.</p>
 </div>
 {% endblock %}
