--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -12,6 +12,9 @@
     <meta name="description" content="Dalite NG">
     <link rel="icon" href="{% static 'peerinst/img/logo.png' %}">
     <link rel="stylesheet" href="{% static 'peerinst/css/main.css' %}">
+
+    <link rel="stylesheet" href="{% static 'peerinst/css/vendor/material-components-web.min.css' %}">
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Custom settings for local instance of dalite-ng -->
@@ -81,5 +84,9 @@
     </script>
 
     {% block scripts %}{% endblock %}
+
+    <script src="{% static 'peerinst/js/vendor/material-components-web.min.js'  %}"></script>
+    <script>mdc.autoInit()</script>
+
   </body>
 </html>
