--- a/peerinst/templates/registration/login.html
+++ b/peerinst/templates/registration/login.html
@@ -24,6 +24,14 @@
 
 </form>
 
+<i class="mdc-icon-toggle material-icons" role="button" aria-pressed="false"
+   aria-label="Add to favorites" tabindex="0"
+   data-toggle-on='{"label": "Remove from favorites", "content": "favorite"}'
+   data-toggle-off='{"label": "Add to favorites", "content": "favorite_border"}'
+   data-mdc-auto-init="MDCIconToggle">
+  favorite_border
+</i>
+
 {% if form.errors %}
   <p>Your username and password didn't match or your account has not yet been activated. Please try again.</p>
 {% endif %}
