work on custom template filter

--- a/custom-settings/SALTISES4/static/peerinst/css/custom-instance.css
+++ b/custom-settings/SALTISES4/static/peerinst/css/custom-instance.css
@@ -1,3 +1,8 @@
+:root {
+    --mdc-theme-primary: #54c0db;
+    --mdc-theme-secondary: #fff946;
+    --mdc-theme-background: #f4f4f4;
+}
 body {
     background-color: #f4f4f4;
     font-family: 'Montserrat', sans-serif;
