--- a/peerinst/templates/registration/login.html
+++ b/peerinst/templates/registration/login.html
@@ -52,7 +52,7 @@
 
   <div>
     <input type="hidden" name="next" value="{{ next }}" />
-    <input class="mdc-button mdc-button--raised" type="submit" value="Login"  data-mdc-auto-init="MDCRipple" />
+    <input class="mdc-button mdc-button--raised" type="submit" value="Submit" data-mdc-auto-init="MDCRipple" />
   </div>
 </form>
 
