--- a/peerinst/templates/registration/password_reset_confirm.html
+++ b/peerinst/templates/registration/password_reset_confirm.html
@@ -1,5 +1,7 @@
 {% extends "peerinst/base.html" %}
 
+{% load add_class %}
+
 {% load i18n static %}
 
 {% block body %}
@@ -10,26 +12,42 @@
 
 {% if validlink %}
 
-<p>{% trans "Please enter your new password twice so we can verify you typed it correctly." %}</p>
+  <p>{% trans "Please enter your new password twice so we can verify you typed it correctly." %}</p>
 
-<form method="post" id="password_change_form">
-  {% csrf_token %}
-<div>
-  {{ form.new_password1.errors }}
-  <label for="id_new_password1">{% trans 'New password:' %}</label><br>
-  {{ form.new_password1 }}
-</div>
-<div>
-  {{ form.new_password2.errors }}
-  <label for="id_new_password2">{% trans 'Confirm password:' %}</label><br>
-  {{ form.new_password2 }}
-</div>
-<input type="submit" value="{% trans 'Change my password' %}">
-</form>
+  <form method="post">
+    {% csrf_token %}
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ form.new_password1|add_class:"mdc-text-field__input" }}<br>
+      {{ form.new_password1.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    {{ form.errors.new_password1 }}
+    <br>
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ form.new_password2|add_class:"mdc-text-field__input" }}<br>
+      {{ form.new_password2.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    {{ form.errors.new_password2 }}
+    <br>
+    <div>
+      <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="{% trans 'Set password' %}" data-mdc-auto-init="MDCRipple"/>
+    </div>
+  </form>
 
 {% else %}
 
-<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
+  <p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
 
 {% endif %}
 
