--- a/peerinst/templates/registration/password_change_form.html
+++ b/peerinst/templates/registration/password_change_form.html
@@ -1,5 +1,7 @@
 {% extends "peerinst/base.html" %}
 
+{% load add_class %}
+
 {% load i18n static %}
 
 {% block body %}
@@ -12,22 +14,45 @@
 
 <form method="post" id="password_change_form">
   {% csrf_token %}
-<div>
-  {{ form.old_password.errors }}
-  <label for="id_old_password">{% trans 'Old password:' %}</label><br>
-  {{ form.old_password }}
-</div>
-<div>
-  {{ form.new_password1.errors }}
-  <label for="id_new_password1">{% trans 'New password:' %}</label><br>
-  {{ form.new_password1 }}
-</div>
-<div>
-  {{ form.new_password2.errors }}
-  <label for="id_new_password2">{% trans 'Confirm password:' %}</label><br>
-  {{ form.new_password2 }}
-</div>
-<input type="submit" value="{% trans 'Change my password' %}">
+  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+    {{ form.old_password|add_class:"mdc-text-field__input" }}<br>
+    {{ form.old_password.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+    <div class="mdc-notched-outline">
+      <svg>
+        <path class="mdc-notched-outline__path"/>
+      </svg>
+    </div>
+    <div class="mdc-notched-outline__idle"></div>
+  </div>
+  {{ form.errors.old_password }}
+  <br>
+  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+    {{ form.new_password1|add_class:"mdc-text-field__input" }}<br>
+    {{ form.new_password1.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+    <div class="mdc-notched-outline">
+      <svg>
+        <path class="mdc-notched-outline__path"/>
+      </svg>
+    </div>
+    <div class="mdc-notched-outline__idle"></div>
+  </div>
+  {{ form.errors.new_password1 }}
+  <br>
+  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+    {{ form.new_password2|add_class:"mdc-text-field__input" }}<br>
+    {{ form.new_password2.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+    <div class="mdc-notched-outline">
+      <svg>
+        <path class="mdc-notched-outline__path"/>
+      </svg>
+    </div>
+    <div class="mdc-notched-outline__idle"></div>
+  </div>
+  {{ form.errors.new_password2 }}
+  <br>
+  <div>
+    <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="{% trans 'Change password' %}" data-mdc-auto-init="MDCRipple"/>
+  </div>
 </form>
 
 {% endblock %}
