--- a/peerinst/templates/registration/password_reset_form.html
+++ b/peerinst/templates/registration/password_reset_form.html
@@ -1,16 +1,34 @@
 {% extends 'peerinst/base.html' %}
 
+{% load add_class %}
+
 {% block body %}
 
 <div>
-    <h1>Reset Password</h1>
-    <p>Enter your email address below and we will send you an email with password reset link.</p>
+  <h1>Password reset</h1>
 
-    <form method="post" id="password_reset_email">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Send email for password reset">
-    </form>
+  <p>Enter your email address below and we will send you a link to reset your password.</p>
+
+  <form method="post">
+    {% csrf_token %}
+
+    <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+      {{ form.email|add_class:"mdc-text-field__input" }}
+      {{ form.email.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+
+    {{ form.email.errors }}
+
+    <div>
+      <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="Reset password" data-mdc-auto-init="MDCRipple"/>
+    </div>
+  </form>
 </div>
 
 {% endblock %}
