--- a/peerinst/templates/registration/sign_up.html
+++ b/peerinst/templates/registration/sign_up.html
@@ -1,28 +1,92 @@
 {% extends 'peerinst/base.html' %}
 
+{% load add_class %}
+
 {% block body %}
 
 <div>
-    <h1>Sign up</h1>
+  <h1>Sign up</h1>
 
-    <p> To create an account, provide a unique username, an e-mail address, and a password. </p>
+  <p> To create an account, provide a unique username, an e-mail address, and a password. </p>
 
-    <p> After the sign-up form is submitted, a site administrator will contact you to finalize the registration process. </p>
+  <p> After the sign-up form is submitted, a site administrator will contact you to finalize the registration process. </p>
 
-    <p> Before filling out the form, please review the <a href="{% url 'terms_teacher' %}">Terms of Service</a>. </p>
+  <!--
+  <p> If you have a faculty e-mail address (i.e. from a recognized server reserved exclusively for teachers or faculty), you will be sent a confirmation e-mail through which you can activate a teacher account.  Otherwise, a site administrator will contact you.</p>
+  -->
+
+  {{ form.non_field_errors }}
+
+  <form method="post">
+    {% csrf_token %}
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ form.email|add_class:"mdc-text-field__input" }}
+      {{ form.email.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    {{ form.errors.email }}
     <br>
-
-    <!--
-    <p> If you have a faculty e-mail address (i.e. from a recognized server reserved exclusively for teachers or faculty), you will be sent a confirmation e-mail through which you can activate a teacher account.  Otherwise, a site administrator will contact you.</p>
-    -->
-
-    <form method="post" id="sign_up">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <br>
-        By clicking on 'Register' you agree to the <a href="{% url 'terms_teacher' %}">Terms of Service</a>.<br>
-        <input type="submit" value="Register">
-    </form>
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ form.username|add_class:"mdc-text-field__input" }}
+      {{ form.username.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    {{ form.errors.username }}
+    <br>
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ form.password1|add_class:"mdc-text-field__input" }}<br>
+      {{ form.password1.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    {{ form.errors.password1 }}
+    <br>
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ form.password2|add_class:"mdc-text-field__input" }}<br>
+      {{ form.password2.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    {{ form.errors.password2 }}
+    <br>
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ form.url|add_class:"mdc-text-field__input" }}<br>
+      {{ form.url.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    {{ form.errors.website }}
+    <br>
+    <br>
+    By clicking on 'Register' you agree to the <a href="{% url 'terms_teacher' %}">Terms of Service</a>.
+    <br>
+    <br>
+    <div>
+      <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="Register" data-mdc-auto-init="MDCRipple"/>
+    </div>
+  </form>
 
 </div>
 
