--- a/peerinst/templates/registration/password_change_form.html
+++ b/peerinst/templates/registration/password_change_form.html
@@ -12,44 +12,26 @@
 
 <p>{% trans "Please enter your old password, for security's sake, and then your new password twice so we can verify you typed it correctly." %}</p>
 
+{{ form.non_field_errors }}
+
 <form method="post" id="password_change_form">
   {% csrf_token %}
-  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
-    {{ form.old_password|add_class:"mdc-text-field__input" }}<br>
-    {{ form.old_password.label_tag|add_class:"mdc-floating-label"|cut:":" }}
-    <div class="mdc-notched-outline">
-      <svg>
-        <path class="mdc-notched-outline__path"/>
-      </svg>
+  {% for field in form %}
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ field|add_class:"mdc-text-field__input" }}
+      {{ field.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
     </div>
-    <div class="mdc-notched-outline__idle"></div>
-  </div>
-  {{ form.errors.old_password }}
-  <br>
-  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
-    {{ form.new_password1|add_class:"mdc-text-field__input" }}<br>
-    {{ form.new_password1.label_tag|add_class:"mdc-floating-label"|cut:":" }}
-    <div class="mdc-notched-outline">
-      <svg>
-        <path class="mdc-notched-outline__path"/>
-      </svg>
-    </div>
-    <div class="mdc-notched-outline__idle"></div>
-  </div>
-  {{ form.errors.new_password1 }}
-  <br>
-  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
-    {{ form.new_password2|add_class:"mdc-text-field__input" }}<br>
-    {{ form.new_password2.label_tag|add_class:"mdc-floating-label"|cut:":" }}
-    <div class="mdc-notched-outline">
-      <svg>
-        <path class="mdc-notched-outline__path"/>
-      </svg>
-    </div>
-    <div class="mdc-notched-outline__idle"></div>
-  </div>
-  {{ form.errors.new_password2 }}
-  <br>
+    <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
+      {{ field.help_text|safe }}
+    </p>
+    {{ form.errors.field }}
+  {% endfor %}
   <div>
     <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="{% trans 'Change password' %}" data-mdc-auto-init="MDCRipple"/>
   </div>
