--- a/peerinst/templates/registration/password_reset_form.html
+++ b/peerinst/templates/registration/password_reset_form.html
@@ -9,6 +9,8 @@
 
   <p>Enter your email address below and we will send you a link to reset your password.</p>
 
+  {{ form.non_field_errors }}
+
   <form method="post">
     {% csrf_token %}
 
