--- a/peerinst/templates/registration/password_reset_confirm.html
+++ b/peerinst/templates/registration/password_reset_confirm.html
@@ -32,7 +32,7 @@
       <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
         {{ field.help_text|safe }}
       </p>
-      {{ form.errors.field }}
+      {{ field.errors }}
     {% endfor %}
     <br>
     <div>
